unpackaged/main/default/objects/Lead/fields/CEA_License_Number__c.field-meta.xml
<CustomField>
    <fullName>CEA_License_Number__c</fullName>
    <label>CEA License Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>