unpackaged/main/default/objects/Lead/fields/ContentLink__c.field-meta.xml
<CustomField>
    <fullName>ContentLink__c</fullName>
    <description>Content URL of Gated Content Page</description>
    <label>ContentLink</label>
    <type>Url</type>
</CustomField>