unpackaged/main/default/objects/Lead/fields/Customer_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Type__c</fullName>
    <description>Type of Customer</description>
    <inlineHelpText>Select the Customer Account Type</inlineHelpText>
    <label>Customer Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Non-Property</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>