unpackaged/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <inlineHelpText>What is the reason why this lead is rejected?</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to reach</fullName>
            </value>
            <value>
                <fullName>Inaccurate data</fullName>
            </value>
            <value>
                <fullName>No interest/need</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>No fit</fullName>
            </value>
            <value>
                <fullName>Not ready to buy</fullName>
            </value>
            <value>
                <fullName>No authority</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Unable to reach (at least 5 attempts)</fullName>
            </value>
            <value>
                <fullName>Already Renewed/Purchased/Registered/Bosted</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL List</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>