unpackaged/main/default/objects/Lead/fields/Hot_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Hot_Touchpoint__c</fullName>
    <description>Populated with the information/touchpoint in the journey about why the lead is marked as Hot</description>
    <label>Hot Touchpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>