unpackaged/main/default/objects/Lead/fields/Lead_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Capture_Date__c</fullName>
    <description>The date that the Lead has been captured: attended the event or enquiry submitted on website</description>
    <inlineHelpText>The date that the Lead has been captured: attended the event or enquiry submitted on website</inlineHelpText>
    <label>Lead Capture Date</label>
    <type>Date</type>
</CustomField>