unpackaged/main/default/objects/Lead/fields/MC_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_Created_Date__c</fullName>
    <description>The date on which MC record is created</description>
    <inlineHelpText>The date on which MC record is created</inlineHelpText>
    <label>MC Created Date</label>
    <type>Date</type>
</CustomField>