unpackaged/main/default/objects/Lead/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <description>Based on Form&#39;s page name for Gated Content. Static value for Enquiry Form</description>
    <label>Page Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>