unpackaged/main/default/objects/Lead/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <description>Current stage of developer&#39;s project</description>
    <label>Project Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>