unpackaged/main/default/objects/Lead/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>This is the field in developer form &#39;How can we help you today?&#39;</description>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>