unpackaged/main/default/objects/Lead/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>