unpackaged/main/default/objects/Lead/recordTypes/B2B.recordType-meta.xml
<RecordType>
    <fullName>B2B</fullName>
    <active>true</active>
    <businessProcess>B2B Lead Process</businessProcess>
    <description>Will convert to Business Account</description>
    <label>B2B</label>
</RecordType>