unpackaged/main/default/objects/Lead/recordTypes/B2C.recordType-meta.xml
<RecordType>
    <fullName>B2C</fullName>
    <active>true</active>
    <businessProcess>B2C Lead Process</businessProcess>
    <description>Will convert to Agent</description>
    <label>B2C</label>
</RecordType>