unpackaged/main/default/objects/Lead/listViews/ALL_Leads_from_MC.listView-meta.xml
<ListView>
    <fullName>ALL_Leads_from_MC</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>MC_Created_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Hot_Touchpoint__c</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Leads from MC</label>
</ListView>