unpackaged/main/default/objects/Lead/listViews/All_NEWASSIGNED_Leads_from_MC.listView-meta.xml
<ListView>
    <fullName>All_NEWASSIGNED_Leads_from_MC</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>MC_Created_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Hot_Touchpoint__c</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.URL</columns>
    <columns>Customer_Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MC_Created_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All NEW/ASSIGNED Leads from MC</label>
</ListView>