unpackaged/main/default/objects/Lead/listViews/All_OPEN_Leads_from_MC.listView-meta.xml
<ListView>
    <fullName>All_OPEN_Leads_from_MC</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>MC_Created_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Hot_Touchpoint__c</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Nhikm</value>
    </filters>
    <filters>
        <field>Source_Campaign__c</field>
        <operation>equals</operation>
    </filters>
    <label>All OPEN Leads from MC</label>
</ListView>