unpackaged/main/default/objects/Lead/listViews/B2B_Developers_ID_Lead.listView-meta.xml
<ListView>
    <fullName>B2B_Developers_ID_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>B2B Developers - ID</label>
    <queue>B2B_Developers_ID</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>