unpackaged/main/default/objects/Lead/listViews/B2B_Developers_SG_Lead.listView-meta.xml
<ListView>
    <fullName>B2B_Developers_SG_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>B2B Developers - SG</label>
    <queue>B2B_Developers_SG</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>