unpackaged/main/default/objects/Lead/listViews/My_NEW_Unassigned_Leads.listView-meta.xml
<ListView>
    <fullName>My_NEW_Unassigned_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Source_Campaign__c</columns>
    <filterScope>Mine</filterScope>
    <label>My NEW Unassigned Leads</label>
</ListView>