unpackaged/main/default/objects/Lead/listViews/My_newly_ASSIGNED_Leads.listView-meta.xml
<ListView>
    <fullName>My_newly_ASSIGNED_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Source_Campaign__c</columns>
    <filterScope>Mine</filterScope>
    <label>My newly ASSIGNED Leads</label>
</ListView>